--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "material-redux-app",
+  "name": "project",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://github.com/siddhansh-creator/project",
