--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@mui/material": "^5.5.2",
-    "@mui/styles": "^5.5.1",
+    "@mui/material": "^5.5.3",
+    "@mui/styles": "^5.5.3",
     "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
@@ -19,6 +19,7 @@
     "react-axios": "^2.0.5",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
+    "react-paginate": "^8.1.2",
     "react-redux": "^7.2.8",
     "react-router": "^6.2.1",
     "react-router-dom": "^5.3.0",
